// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders logged in without crashing 1`] = `
Array [
  <p>
    Auth state: 
    Logged in user: undefined
  </p>,
  <ul>
    <li>
      <a
        aria-current={null}
        href="/home"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/terms"
        onClick={[Function]}
      >
        Terms
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/logout"
        onClick={[Function]}
      >
        Log out
      </a>
    </li>
  </ul>,
]
`;

exports[`renders without crashing 1`] = `
Array [
  <p>
    Auth state: 
    Logged out
  </p>,
  <ul>
    <li>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Landing
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/terms"
        onClick={[Function]}
      >
        Terms
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/login"
        onClick={[Function]}
      >
        Log in
      </a>
    </li>
  </ul>,
]
`;
